fix(PR-686): disable linewrap on whitespaces in pose items

--- a/src/app/joint-control/pose/pose.component.css
+++ b/src/app/joint-control/pose/pose.component.css
@@ -56,6 +56,7 @@ button:disabled img {
 .pose-label {
     user-select: none;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .selected .apply-button {
